--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,9 @@
 .visit-me-link:hover {
     padding-left: 30px;
 }
+
+@media (min-width: 320px) and (max-width: 480px) {
+	.visit-me {
+	    display: none !important;
+	}
+}
